kubernetes/argocd/applications/kubeden/kubeden-client/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeden-client
  labels:
    app: kubeden-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubeden-client
  template:
    metadata:
      labels:
        app: kubeden-client
    spec:
      containers:
      - name: kubeden-client
        image: registry.digitalocean.com/kubeden/kubeden-client:2270519
        ports:
        - containerPort: 8080
