kubernetes/argocd/applications/kubeden/kubeden-client/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kubeden-client-service
spec:
  selector:
    app: kubeden-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
